searching recipes and pagination

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <!-- Header Search -->
         <div id="page-header-search" class="overlay-header">
           <div class="content-header content-header-fullrow">
-            <form>
+            <form class="search_form">
               <div class="input-group">
                 <div class="input-group-prepend">
                   <!-- Close Search Section -->
@@ -105,7 +105,7 @@
                 </div>
                 <input
                   type="text"
-                  class="form-control"
+                  class="form-control search_field"
                   placeholder="Search or hit ESC.."
                   id="page-header-search-input"
                   name="page-header-search-input"
@@ -140,7 +140,7 @@
           <div class="row">
             <!-- User -->
             <div class="col-lg-4 col-xl-3">
-              <!-- Worldwide Trends -->
+              <!-- Recipes -->
               <div class="block block-rounded">
                 <div class="block-header">
                   <h3 class="block-title font-w600">Recipes</h3>
@@ -161,9 +161,31 @@
                 </div>
                 <div class="block-content">
                   <ul class="nav-users pull-all recipes"></ul>
+
+                  <div class="recipe_pagination">
+                    <!--Start pagination buttons-->
+                    <!-- <button
+                      type="button"
+                      class="btn btn-alt-secondary float-right"
+                      data-toggle="tooltip"
+                      title="Next"
+                    >
+                      <i class="fa fa-chevron-right fa-fw"></i>
+                    </button>
+                    <button
+                      type="button"
+                      class="btn btn-alt-secondary float-left"
+                      data-toggle="tooltip"
+                      title="Previous"
+                    >
+                      <i class="fa fa-chevron-left fa-fw"></i>
+                    </button> -->
+                    <!--End pagination buttons-->
+                  </div>
                 </div>
               </div>
-              <!-- END Worldwide Trends -->
+
+              <!-- END Recipes -->
             </div>
             <!-- END User -->
 
