Render selected recipe

--- a/index.html
+++ b/index.html
@@ -144,20 +144,6 @@
               <div class="block block-rounded">
                 <div class="block-header">
                   <h3 class="block-title font-w600">Recipes</h3>
-                  <div class="block-options">
-                    <!-- <button
-                      type="button"
-                      class="btn-block-option"
-                      data-toggle="block-option"
-                      data-action="state_toggle"
-                      data-action-mode="demo"
-                    >
-                      <i class="si si-refresh"></i>
-                    </button>
-                    <button type="button" class="btn-block-option">
-                      <i class="si si-wrench"></i>
-                    </button> -->
-                  </div>
                 </div>
                 <div class="block-content">
                   <ul class="nav-users pull-all recipes"></ul>
@@ -187,65 +173,18 @@
 
               <!-- END Recipes -->
             </div>
-            <!-- END User -->
 
-            <!-- Updates -->
+            <!-- Selected recipe -->
             <div class="col-lg-4 col-xl-6">
               <div class="block block-rounded">
                 <div class="block-content block-content-full">
                   <div class="media">
-                    <img
-                      class="img-avatar img-avatar48 mr-20"
-                      src="assets/media/avatars/avatar13.jpg"
-                      alt=""
-                    />
-                    <div class="media-body">
-                      <p class="mb-0">
-                        <a class="font-w600" href="javascript:void(0)"
-                          >Wayne Garcia</a
-                        >
-                        <a class="text-muted" href="javascript:void(0)"
-                          >@waynegarcia</a
-                        >
-                        <em class="text-muted">&bull; 30m</em>
-                      </p>
-                      <p>
-                        In gravida nulla. Nulla vel metus scelerisque ante
-                        sollicitudin. Cras purus odio, vestibulum in vulputate
-                        at, tempus viverra turpis. Fusce condimentum nunc ac
-                        nisi vulputate fringilla. Donec lacinia congue felis in
-                        faucibus.
-                      </p>
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-rounded btn-alt-secondary mr-10"
-                      >
-                        <i class="fa fa-fw fa-comment-o"></i>
-                      </button>
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-rounded btn-alt-secondary mr-10"
-                      >
-                        <i class="fa fa-fw fa-retweet"></i>
-                      </button>
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-rounded btn-alt-secondary mr-10"
-                      >
-                        <i class="fa fa-fw fa-heart-o"></i>
-                      </button>
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-rounded btn-alt-secondary mr-10"
-                      >
-                        <i class="fa fa-fw fa-envelope-o"></i>
-                      </button>
-                    </div>
+                    <div class="media-body recipe"></div>
                   </div>
                 </div>
               </div>
             </div>
-            <!-- END Updates -->
+            <!-- END Selected recipe -->
 
             <!-- Extra -->
             <div class="col-lg-4 col-xl-3">
